[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "api-sample"
version = "0.1.0"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.0.0-beta.8"
actix-router = "0.4.0"
actix-rt = "2.2.0"
actix-swagger = "=0.3.0-beta.1"
actix-web = { version = "4.0.0-beta.8", features = ["rustls"]}
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
futures = "0.3.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
eyre = "0.6.5"
serde_plain = "0.3.0"
time = "0.2.26"
thiserror = "1.0.26"
validator = "0.14.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
derive_more = "0.99.16"
